<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/icon3" />

    <LinearLayout
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            android:background="@drawable/login_fields_bg"
            android:ems="10"
            android:hint="@string/user_hint"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="@drawable/login_fields_bg"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/password_hint"
            android:inputType="textEmailAddress"
            android:password="true"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#95d1fb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:text="@string/login_alt" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorGray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="18dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_fb" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/login_facebook"
            android:textColor="@color/facebookBlue" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:background="@color/colorGray" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/register_opt"
        android:textAllCaps="false"
        android:textColor="@color/colorDarkGray" />

</LinearLayout>